2010-03-21 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/c.nanorc: Add additional support for #include_next and #pragma

2010-03-21 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down()): Explicitly set current_y to 0 when paging 
	  up when not in smooth scroll mode, as previous fixes would otherwise cause 
	  the cursor to not really be moved to the stop of the screen.

2010-03-07 Chris Allegretta <chrisa@asty.org>
	* configure.ac, nano.c (handle_sigwinch): Create check for whether LINES and
	  COLS can safely be redefined.  Fixes compilation issues with cygwin, and likely
	  with newer versions of ncurses, fixes Savannah bug 28984 repoted by Andy Koppe
          and Eric Oliver via mailing list.
	* winio.c (get_mouseinput) - fix stray semicolon in code, also reported in
	  bug 28984.

GNU nano 2.2.3 - 2010.02.11
2010-01-28 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down): Fix for smooth mode not preserving cusor 
	  position.  Part one of fix for Savannah bug 21178 by Mike Frysinger.

GNU nano 2.2.2 - 2010.01.17
2010-01-17 Chris Allegretta <chrisa@asty.org>
	* nano.c (main), prompt.c (do_statusbar_input): Handle problems with an unmapped 
	  function due to key rebinding, fixes crashes on FreeBSD repoted by Eitan 
	  Adler <eitanadlerlist@gmail.com>.

2010-01-14 Chris Allegretta <chrisa@asty.org>
	* files.c (do_writeout): Fix for crash / incorrect external modification warning
	  due to earlier fix in r4467.

2010-01-12 Chris Allegretta <chrisa@asty.org>
	* move.c (do_page_up, do_page_down): Fix issues with not enough scrolling down/up
	  and cursor centering.
	* winio.c (edit_scroll): Remove lots of needless checking of line length for 
	  soft wrapping code.
	* winio.c (edit_update) - Remove extra code for when updating with old_current outside
	  of the new buffer boundary and centering issues.

2010-01-05 Tito <farmatito@tiscali.it>